[tool.poetry]
name = "miden-ai"
version = "0.1.0"
description = "Miden AI Telegram Bot"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
python-telegram-bot = "13.7"
python-dotenv = "0.19.0"
groq = "0.4.2"
requests = "2.31.0"
beautifulsoup4 = "4.12.2"
flask = "2.0.1"
gunicorn = "21.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api" 